# heston_trading_bot

./: CMakeLists.txt  README.md  programin
includes/: black_scholes.hpp  create_order.hpp  get_historical.hpp  is_neutral_bullish.hpp  math_utils.hpp  normalize.hpp  readenv.hpp  request.hpp  rolling_slope.hpp  sma.hpp  utils.hpp
src/: black_scholes.cpp  create_order.cpp  get_historical.cpp  is_neutral_bullish.cpp  main.cpp  math_utils.cpp  normalize.cpp  readenv.cpp  request.cpp  rolling_slope.cpp  sma.cpp
utils/: black_scholes.cpp  black_scholes.ipynb
